--- a/tpmgconfigclient-qa.properties
+++ b/tpmgconfigclient-qa.properties
@@ -1,3 +1,3 @@
 #test message
-message=tpmgconfigclient value from qa updated
-driverClassName=driver name from updated qa
+message=tpmgconfigclient value from qa 
+driverClassName=driver name from  qa
