--- a/tpmgconfigclient-qa.properties
+++ b/tpmgconfigclient-qa.properties
@@ -1,3 +1,3 @@
 #test message
-message=tpmgconfigclient value from qa 
-driverClassName=driver name from  qa
+message=tpmgconfigclient value from updated qa 
+driverClassName=driver name from updated qa
