--- a/tpmgconfigclient-qa.properties
+++ b/tpmgconfigclient-qa.properties
@@ -1,3 +1,3 @@
 #test message
-message=tpmgconfigclient value from updated qa 
+message=tpmgconfigclient value from updated qa  1
 driverClassName=driver name from updated qa
